# Pinniped

./: AGENTS.md  Cargo.toml
Pinniped/: ContentView.swift  Item.swift  PinnipedApp.swift
Pinniped.xcodeproj/: project.pbxproj
Pinniped.xcodeproj/project.xcworkspace/xcuserdata/aidanfarnum.xcuserdatad/: UserInterfaceState.xcuserstate
Pinniped.xcodeproj/xcuserdata/aidanfarnum.xcuserdatad/xcschemes/: xcschememanagement.plist
PinnipedTests/: PinnipedTests.swift
PinnipedUITests/: PinnipedUITests.swift  PinnipedUITestsLaunchTests.swift
ios-test-app/: README.md
ios-test-app/PinnipedTestApp/PinnipedTestApp/: Info.plist
mobile/: README.md
mobile/ios/Pinniped/NativeModules/: RNPinnipedEditor.m  RNPinnipedEditor.swift
mobile/ios/Pinniped/RustCore/: PinnipedCore.swift
mobile/src/native/: PinnipedEditor.ts  example.ts
rust-core/: Cargo.toml  build-ios.sh
rust-core/include/: pinniped_core.h
rust-core/src/: block.rs  document.rs  error.rs  ffi.rs  inline.rs  lib.rs  parser.rs  table.rs
rust-core/tests/: basic_tests.rs  edge_cases.rs  integration_tests.rs  parser_tests.rs
wasm-bindings/: Cargo.toml  build.sh
wasm-bindings/src/: lib.rs
web-test/: index.html  main.js  serve.sh  style.css
